# ims

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/api-core/: Cargo.toml
api/api-core/src/: database.rs  error.rs  main.rs
api/api-core/src/article/: routes.rs
api/api-core/src/auth/: jwt.rs
api/api-core/src/role/: helpers.rs  mod.rs  routes.rs
api/api-core/src/user/: db_requests.rs  helpers.rs  mod.rs  routes.rs
api/api-models/: Cargo.toml
api/api-models/src/: lib.rs
api/api-models/src/article/: model.rs
api/api-models/src/role/: model.rs
api/api-models/src/user/: model.rs
api/sql/: tables.sql
api/src/: main.rs
api/src/article/: model.rs  routes.rs
api/src/role/: model.rs
api/src/user/: helpers.rs  mod.rs  model.rs  routes.rs
app/: Cargo.toml  pubspec.yaml
app/lib/: API.dart  main.dart
app/lib/pages/: login.dart
database/: docker-compose.yml
database/startup_queries/: init.sql  testdata.sql
database/tables/: articles.sql  documents.sql  users.sql
database/tables/unconnected/: companies.sql
