[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

[dependencies]
api-models = { path = "../api-models" }
actix-web = "4"
dotenv = "0.15"
sqlx = {version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "macros", "time"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
lazy_static = "1.4.0"
rand = "0.8.5"
thiserror = "1.0.63"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
base64-url = "3.0.0"
once_cell = "1.21.3"
